force-app/main/default/objects/Variant__c/fields/Allow_Indent__c.field-meta.xml
<CustomField>
    <fullName>Allow_Indent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow Sales Executive to indent order for this variant</inlineHelpText>
    <label>Allow Indent</label>
    <type>Checkbox</type>
</CustomField>