force-app/main/default/objects/Variant__c/fields/BHP__c.field-meta.xml
<CustomField>
    <fullName>BHP__c</fullName>
    <label>BHP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>