force-app/main/default/objects/Variant__c/fields/DWH_Variant_ID__c.field-meta.xml
<CustomField>
    <fullName>DWH_Variant_ID__c</fullName>
    <externalId>true</externalId>
    <label>DWH Variant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>