force-app/main/default/objects/Variant__c/fields/Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity__c</fullName>
    <label>Engine Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>