force-app/main/default/objects/Variant__c/fields/Listed_price__c.field-meta.xml
<CustomField>
    <fullName>Listed_price__c</fullName>
    <label>Listed price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>