force-app/main/default/objects/Variant__c/fields/Model_ID__c.field-meta.xml
<CustomField>
    <fullName>Model_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model_ID</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Variants</relationshipLabel>
    <relationshipName>Variants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>