force-app/main/default/objects/Variant__c/fields/Number_of_Doors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Doors__c</fullName>
    <label>Number of Doors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>