force-app/main/default/objects/Variant__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <label>Transmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>