force-app/main/default/objects/Variant__c/fields/Variant_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Variant_Display_Name__c</fullName>
    <label>Variant Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>