force-app/main/default/objects/Variant__c/fields/Variant_Magic__c.field-meta.xml
<CustomField>
    <fullName>Variant_Magic__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(DWH_Variant_ID__c, TEXT(Branch__c), &quot;&quot;), TEXT(Franchise__c), &quot;&quot;), &quot;,&quot;, &quot;&quot;)</formula>
    <label>Variant Magic</label>
    <type>Text</type>
</CustomField>