force-app/main/default/objects/Variant__c/fields/X18CharVariantId__c.field-meta.xml
<CustomField>
    <fullName>X18CharVariantId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18CharVariantId</label>
    <type>Text</type>
</CustomField>