force-app/main/default/objects/Variant__c/listViews/All_Citroen.listView-meta.xml
<ListView>
    <fullName>All_Citroen</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Listed_price__c</columns>
    <columns>Fuel_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>CCF</value>
    </filters>
    <label>All Citroen</label>
    <sharedTo>
        <role>CITPC_Sales_Manager</role>
    </sharedTo>
</ListView>