force-app/main/default/objects/Variant__c/listViews/MB_Allowed_Indent_Variant.listView-meta.xml
<ListView>
    <fullName>MB_Allowed_Indent_Variant</fullName>
    <columns>NAME</columns>
    <columns>Model_ID__c</columns>
    <columns>DWH_Variant_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Allow_Indent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>CCI</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Allow_Indent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MB Allowed Indent Variant</label>
</ListView>